@@ -64,6 +64,10 @@ Bug Fixes:
  -- Restore newline skipping in wrap(), broken in 2.7.0.2 (Issue 278).
  -- Fix line-duplication bug in wrap(), broken in 2.7.0.2 (Issue 286).
  -- Fix tab expansion in wrap().
+ -- Fixed memory leak in scheduler because of running out of memory.
+ -- Fixed non-player object's ability to hold coins.
+ -- Fixed loading of coins from flatfile (i.e., across @restart for
+    memory-based) (Issue 224).
 
 
 Performance Enhancements:
